--- a/style.css
+++ b/style.css
@@ -316,12 +316,10 @@ h3{
 .footer{
     width: 100%;
     text-align: center;
-    padding: 30px 0;
 }
 
 .footer h4{
     margin-bottom: 25px;
-    margin-top: 20px;
     font-weight: 600;
 }
 .icons .fa{
@@ -391,11 +389,14 @@ h3{
 }
 .contact-us{
     width: 80%;
-    margin: auto;
+    margin: 20px auto;
 }
 .contact-col{
     flex-basis: 48%;
-    margin-bottom: 30px;
+    margin: 2% auto 30px auto;
+    /*display: flex;*/
+    text-align: center;
+    align-items: center;
 }
 .contact-col div{
     display: flex;
@@ -418,10 +419,16 @@ h3{
     font-weight: 400;
 }
 .contact-col input, .contact-col textarea{
-    width: 100%;
+    width: 70%;
     padding: 15px;
     margin-bottom: 17px;
     outline: none;
     border: 1px solid #ccc;
     box-sizing: border-box;
+    resize: none;
+    align-items: center;
+}
+#contact-col{
+    display: flex;
+    justify-content: center;
 }
