Actualizaciones a la página realizadas en el montaje al servidor

--- a/web_page/css/style.css
+++ b/web_page/css/style.css
@@ -401,7 +401,8 @@ h3{
 .contact-col div{
     display: flex;
     align-items: center;
-    margin-bottom: 40px;
+    margin: 0 2% 2% 2%;
+/*    margin-bottom: 40px;*/
 }
 .contact-col div .fa{
     font-size: 28px;
@@ -431,4 +432,7 @@ h3{
 #contact-col{
     display: flex;
     justify-content: center;
+}
+textarea{
+    font-size: 14px;
 }
