--- a/web_app/css/style.css
+++ b/web_app/css/style.css
@@ -1,161 +1,213 @@
 /*Initial configuration*/
 
 *{
-  margin: 0;
-  padding: 0;
-  font-family: 'Poppins', sans-serif;
+    margin: 0;
+    padding: 0;
+    font-family: 'Poppins', sans-serif;
 }
 
 /*General configuration*/
 
 .header{
-  min-height: 100vh;
-  width: 100%;
-  background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(../images/banner.png);
-  background-position: center;
-  background-size: cover;
-  position: relative;
+    min-height: 100vh;
+    width: 100%;
+    background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(../images/banner.png);
+    background-position: center;
+    background-size: cover;
+    position: relative;
 }
 #logo{
-  width: 9.7%;
-  margin-top: 2%;
-  margin-left: 3%;
+    width: 9.7%;
+    margin-top: 2%;
+    margin-left: 3%;
 }
 
 /*Login configuration*/
 
 .center{
-  padding: 2% 0;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 26%;
-  background-color: #fcfbff;
-  border-radius: 10px;
-  box-shadow: 7px 13px 37px #000;
+    padding: 2% 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 26%;
+    background-color: #fcfbff;
+    border-radius: 10px;
+    box-shadow: 7px 13px 37px #000;
 }
 .center h1{
-  color: #23395B;
-  font: 750 normal 25px sans-serif;
-  text-align: center;
-  padding: 0 0 20px 0;
+    color: #23395B;
+    font: 750 normal 25px sans-serif;
+    text-align: center;
+    padding: 0 0 20px 0;
+    /*border-bottom: 1px solid silver;*/
 }
 .center form{
-  padding: 0 40px;
-  box-sizing: border-box;
+    padding: 0 40px;
+    box-sizing: border-box;
 }
 form .txt_field{
-  position: relative;
-  border-bottom: 2px solid #000;
-  margin: 30px 0;
+    position: relative;
+    border-bottom: 2px solid #000;
+    margin: 30px 0;
 }
 .txt_field{
-  width: 100%;
-  padding: 0 5px;
-  height: 40px;
-  font-size: 16px;
-  border: none;
-  background: none;
-  outline: none;
+    width: 100%;
+    padding: 0 5px;
+    height: 40px;
+    font-size: 16px;
+    border: none;
+    background: none;
+    outline: none;
 }
 .txt_field label{
-  position: absolute;
-  top: 50%;
-  left: 5px;
-  color: #adadad;
-  transform: translateY(-50%);
-  font-size: 16px;
-  pointer-events: none;
-  transition: .5s;
+    position: absolute;
+    top: 50%;
+    left: 5px;
+    color: #adadad;
+    transform: translateY(-50%);
+    font-size: 16px;
+    pointer-events: none;
+    transition: .5s;
 }
 .inputField{
-  margin: 2.5% 0;
-  height: 60%;
-  width: 100%;
-  border: none;
-  background-color: #fcfbff;
+    margin: 2.5% 0;
+    height: 60%;
+    width: 100%;
+    border: none;
+    background-color: #fcfbff;
 }
 .txt_field span::before{
-  content: '';
-  position: absolute;
-  top: 40px;
-  left: 0;
-  width: 100%;
-  height: 2px;
-  background: #23395B;
-  transition: .5s;
+    content: '';
+    position: absolute;
+    top: 40px;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background: #23395B;
+    transition: .5s;
 }
 .txt_field input:focus ~ label,
 .txt_field input:valid ~ label{
-  top: -5px;
-  color: #adadad;
+    top: -5px;
+    color: #adadad;
 }
 .txt_field input:focus ~ span::before,
 .txt_field input:valid ~ span::before{
-  width: 100%;
+    width: 100%;
 }
 input[type="submit"]{
-  margin-top: 10%;
-  margin-bottom:3%;
-  width: 100%;
-  height: 50px;
-  border: 1px solid;
-  background: #23395B;
-  border-radius: 25px;
-  font-size: 18px;
-  color: #fcfbff;
-  font-weight: 700;
-  cursor: pointer;
-  outline: none;
+    margin-top: 10%;
+    margin-bottom:3%;
+    width: 100%;
+    height: 50px;
+    border: 1px solid;
+    background: #23395B;
+    border-radius: 25px;
+    font-size: 18px;
+    color: #fcfbff;
+    font-weight: 700;
+    cursor: pointer;
+    outline: none;
 }
 input[type="submit"]:hover{
-  border-color: #23395B;
-  transition: .5s;
+    border-color: #23395B;
+    transition: .5s;
 }
 
 /*User panel configuration*/
 
-#optionsPanel{
-  padding: 2% 0;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 60%;
-  height: 70%;
-  background: #fcfbff;
-  border-radius: 10px;
-  box-shadow: 7px 13px 37px #000;
+#optionsPanelUser{
+    padding: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 60%;
+    height: 70%;
+    background: #fcfbff;
+    border-radius: 10px;
+    box-shadow: 7px 13px 37px #000;
 }
-#optionsPanel h1{
-  color: #23395B;
-  font: 750 normal 25px sans-serif;
-  text-align: center;
-  padding: 0 0 20px 0;
-  border-bottom: 1px solid silver;
+#optionsPanelUser h1{
+    color: #fff;
+    font: 750 normal 25px sans-serif;
+    text-align: center;
+    padding: 2% 0 20px 0;
+    border-radius: 10px 10px 0px 0px;
+    border-bottom: 1px solid silver;
+    background-color: #23395B;
 }
-#grid-container{
-  margin-top: 6%;
-  margin-bottom: 6%;
+#gridContainerUser{
+    margin-top: 5.5%;
+    margin-bottom: 6%;
 }
-.buttonsPanel{
-  margin: 2% 0px 5% 7%;
-  width: 39.5%;
-  height: 70px;
-  float: left;
-  background-attachment: fixed;
-  border-radius: 3px;
-  box-shadow: 0 2.5px 7.5px rgba(0, 0, 0, 0.322);
-  overflow: visible;
-  background-color: #23395B;
-  text-align: center;
+.buttonsPanelUser{
+    margin: 1% 0px 5% 7%;
+    width: 39.5%;
+    height: 70px;
+    float: left;
+    background-attachment: fixed;
+    border-radius: 3px;
+    box-shadow: 0 2.5px 7.5px rgba(0, 0, 0, 0.322);
+    overflow: visible;
+    background-color: #23395B;
+    text-align: center;
 }
-.buttonsPanel p{
-  font: 550 18px sans-serif;
-  color: #fcfbff;
-  position: relative;
-  top: 50%;
-  left: 50%;
-  transform: translateX(-50%) translateY(-50%);
+.buttonsPanelUser p{
+    font: 550 18px sans-serif;
+    color: #fcfbff;
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+}
+
+/*User panel configuration*/
+
+#optionsPanelAdmin{
+    padding: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 60%;
+    height: 90%;
+    background: #fcfbff;
+    border-radius: 10px;
+    box-shadow: 7px 13px 37px #000;
+}
+#optionsPanelAdmin h1{
+    color: #fff;
+    font: 750 normal 25px sans-serif;
+    text-align: center;
+    padding: 2% 0 20px 0;
+    border-radius: 10px 10px 0px 0px;
+    border-bottom: 1px solid silver;
+    background-color: #23395B;
+}
+#gridContainerAdmin{
+    margin-top: 3.5%;
+    margin-bottom: 6%;
+}
+.buttonsPanelAdmin{
+    margin: 2% 0px 2% 7%;
+    width: 39.5%;
+    height: 70px;
+    float: left;
+    background-attachment: fixed;
+    border-radius: 3px;
+    box-shadow: 0 2.5px 7.5px rgba(0, 0, 0, 0.322);
+    overflow: visible;
+    background-color: #23395B;
+    text-align: center;
+}
+/*#f44336*/
+.buttonsPanelAdmin p{
+    font: 550 18px sans-serif;
+    color: #fcfbff;
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
 }
