--- a/web_app/src/views/searchUser.ejs
+++ b/web_app/src/views/searchUser.ejs
@@ -1,52 +1,41 @@
 <%- include('partials/_header'); %>
 
 <section class="header">
-    <img id="logo" src="../images/logo.png">
     <div id="searchitemPanel">
-        <h1>Clientes asociados a la concesionaria</h1>
-        <table id="tablaArticulos" style="width:100%">
+        <h1>Usuarios asociados al sistema de la concesionaria</h1>
+        <table id="articleTable" class="table table-striped table-bordered">
             <thead>
                 <tr>
                     <th>ID</th>
                     <th>CÉDULA</th>
                     <th>NOMBRES</th>                                
                     <th>APELLIDOS</th>
-                    <th>CORREO ELECTRONICO</th>
+                    <th>CORREO ELECTRÓNICO</th>
                     <th>CONTACTO</th>                                
                     <th>DIRECCCIÓN</th>
-                    <th>CONTRASEÑA</th>
                     <th>AREA ASOCIADA</th>
                     <th>ESTADO</th>                                             
                 </tr>
             </thead>
             <tbody>
+                <% if (data) { %>
+                    <% for (var i = 0; i < data.length; i++) { %>
+                    <tr>
+                        <td><%= data[i].ID_EMPLEADO %></td>
+                        <td><%= data[i].CEDULA %></td>
+                        <td><%= data[i].NOMBRES %></td>
+                        <td><%= data[i].APELLIDOS %></td>
+                        <td><%= data[i].CORREO_ELECTRONICO %></td>
+                        <td><%= data[i].CONTACTO %></td>
+                        <td><%= data[i].DIRECCION %></td>
+                        <td><%= data[i].DEPARTAMENTO_AREA_ID_DEPARTAMENTO_AREA %></td>
+                        <td><%= data[i].ESTADO_EMPLEADO_ID_ESTADO_EMPLEADO %></td>
+                    </tr>
+                    <% } %>
+                <% } %>
             </tbody>
         </table>
     </div>
 </section>
-<!--<script>
-    $(document).ready(function() {   
-        var url = 'http://localhost:443/getUsers';
-    
-            $('#tablaArticulos').DataTable({            
-                "ajax":{
-                    "url": url,
-                    "dataSrc":""
-                },
-                "columns":[
-                    {"data":"ID_EMPLEADO"},
-                    {"data":"CEDULA"},
-                    {"data":"NOMBRES"},
-                    {"data":"APELLIDOS"},
-                    {"data":"CORREO_ELECTRONICO"},
-                    {"data":"CONTACTO"},
-                    {"data":"DIRECCION"},
-                    {"data":"CONTRASENA"},
-                    {"data":"DEPARTAMENTO_AREA_ID_DEPARTAMENTO_AREA"},
-                    {"data":"ESTADO_EMPLEADO_ID_ESTADO_EMPLEADO"},
-                ]
-            });
-    });
-</script>-->
 
 <%- include('partials/_footer'); %>
