--- a/web_app/src/views/partials/_header.ejs
+++ b/web_app/src/views/partials/_header.ejs
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, 
     initial-scale=1.0">
   <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/bootstrap.min.css">
   <title>Concesionaria Mashin</title>
 </head>
 <body>
