Vista de los formularios de dudas e inquietudes desde el aplicativo web de la concesionaria

--- a/web_app/src/views/DashboardAdmin.ejs
+++ b/web_app/src/views/DashboardAdmin.ejs
@@ -12,6 +12,12 @@
 				</div>
 			</a>
 
+			<a href="/goSearchCustomerQuestions">
+				<div class="buttonsPanel">
+					<p class"pButtons">Buscar consultas de las personas</p>
+				</div>
+			</a>
+
 			<a href="/goSearchCustomer">
 				<div class="buttonsPanel">
 					<p class"pButtons">Buscar cliente</p>
@@ -103,7 +109,7 @@
 			</a>
 
 			<a href="/">
-				<div id="buttonsPanelExit">
+				<div class="buttonsPanel">
 					<p class"pButtons">Salir</p>
 				</div>
 			</a>
